# nexus-functions

./: .dockerignore  .gitignore  API_REFERENCE.md  CHANGELOG.md  Cargo.toml  DAY1_COMPLETE.md  DAY5_SUMMARY.md  DAY6_SUMMARY.md  DAY7_SUMMARY.md  Dockerfile  PROJECT_PLAN.md  README.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  nats-server.conf  nexus.yaml  test_day3.ps1  test_day5.ps1
.github/workflows/: ci-cd.yml  dependency-update.yml
api-gateway/: Cargo.toml
api-gateway/src/: lib.rs  webhook.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: errors.rs  executor.rs  lib.rs  metrics.rs  server.rs  state.rs
core/src/config/: mod.rs
docs/: ARCHITECTURE.md  DAY2_SUMMARY.md  DEPLOYMENT.md  GETTING_STARTED.md  ROADMAP.md
event-fabric/: Cargo.toml
event-fabric/src/: cloudevents.rs  event_store.rs  lib.rs  nats_client.rs  publisher.rs
examples/: nexus.yaml.example
examples/hello-world/: README.md  build.sh
examples/hello-world/src/: lib.rs
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
observability/: Cargo.toml
observability/src/: context.rs  lib.rs  tracing_config.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  wasm_executor.rs  wasm_loader.rs
