[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["http1", "http2"] }
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Local crates
nexus-event-fabric = { path = "../event-fabric" }
nexus-runtime = { path = "../runtime" }
nexus-observability = { path = "../observability" }
